@@ -98,6 +98,7 @@ Version 1.11.1+svn:
    * Fixed bug #19970: No longer terminate due to corrupt preferences.
    * Changed: Increased the pango cairo dependency to version 1.24.4.
    * Fixed a display artifact (halos not cleared) when WML moves a unit.
+   * Improved the display of vision costs in the unit help.
 
 Version 1.11.1:
  * AI:
